--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>レスポンシブ対応</title>
+	<title>Check User Agent</title>
 	<link rel="stylesheet" type="text/css" href="css/common/common.css">
 	<script type="text/javascript">
 		if ((navigator.userAgent.indexOf('iPhone') > 0 || navigator.userAgent.indexOf('iPod') > 0 || navigator.userAgent.indexOf('Android') > 0)) {
